[package]
name = "trickle-crypto"
version = "0.1.0"
edition = "2021"

proc-macro = true

[dependencies]
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[features]
default = [ "hfs" ]
hfs = [] # enable hybrid forward secrecy with key encapsulation
