[package]
name = "trickle-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
blake2 = "0.10.6"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10.8"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[features]
default = [ "hfs" ]
hfs = [] # enable hybrid forward secrecy with key encapsulation
